--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rust_decimal = "1.16.0"
 rust_decimal_macros = "1.16.0"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
+serde_url_params = "0.2.1"
 serde_yaml = "0.8.21"
 tokio = { version = "1.12.0", features = ["full"] }
 
